--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "an application called Note Taker that can be used to write and save notes using an Express.js back end and saving and retrieving note data from a JSON file",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
@@ -22,6 +21,10 @@
     "url": "https://github.com/andradag/note-taker/issues"
   },
   "homepage": "https://github.com/andradag/note-taker#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
+  },
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
